--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="assets/css/styles.css">
         <link rel="icon" href="assets/img/doro.png" type="image/png">
 
-        <title>Group 11 Foods</title>
+        <title>Addis Central Restaurant</title>
     </head>
     <body>
 
@@ -48,7 +48,7 @@
             <section class="home" id="home">
                 <div class="home__container bd-container bd-grid">
                     <div class="home__data">
-                        <h1 class="home__title">Addis Central Restaurant foods</h1>
+                        <h1 class="home__title">Addis Central Restaurant</h1>
                         <h2 class="home__subtitle">Try the best food of <br> the century.</h2>
                         <a href="#" class="button">View Menu</a>
                     </div>
